# libmjolnir-demo

./: .gitignore  CMakeLists.txt  README.md  main.c  mjolnir.json
baz/: baz.h  baz1.c  baz10.c  baz11.c  baz12.c  baz13.c  baz14.c  baz15.c  baz16.c  baz17.c  baz18.c  baz19.c  baz2.c  baz20.c  baz21.c  baz22.c  baz23.c  baz24.c  baz25.c  baz26.c  baz27.c  baz28.c  baz29.c  baz3.c  baz30.c  baz31.c  baz32.c  baz33.c  baz34.c  baz35.c  baz36.c  baz37.c  baz38.c  baz39.c  baz4.c  baz40.c  baz41.c  baz42.c  baz43.c  baz44.c  (+11 more)
libfoobar/: .gitignore  CMakeLists.txt  mjolnir.json
libfoobar/bar/: bar.h  bar1.c  bar10.c  bar11.c  bar12.c  bar13.c  bar14.c  bar15.c  bar16.c  bar17.c  bar18.c  bar19.c  bar2.c  bar20.c  bar21.c  bar22.c  bar23.c  bar24.c  bar25.c  bar26.c  bar27.c  bar28.c  bar29.c  bar3.c  bar30.c  bar31.c  bar32.c  bar33.c  bar34.c  bar35.c  bar36.c  bar37.c  bar38.c  bar39.c  bar4.c  bar40.c  bar41.c  bar42.c  bar43.c  bar44.c  (+11 more)
libfoobar/foo/: foo.h  foo1.c  foo10.c  foo11.c  foo12.c  foo13.c  foo14.c  foo15.c  foo16.c  foo17.c  foo18.c  foo19.c  foo2.c  foo20.c  foo21.c  foo22.c  foo23.c  foo24.c  foo25.c  foo26.c  foo27.c  foo28.c  foo29.c  foo3.c  foo30.c  foo31.c  foo32.c  foo33.c  foo34.c  foo35.c  foo36.c  foo37.c  foo38.c  foo39.c  foo4.c  foo40.c  foo41.c  foo42.c  foo43.c  foo44.c  (+11 more)
libfoobar/mjolnir/src/libfoobar/bar/: bar.go  bar_test.go
libfoobar/mjolnir/src/libfoobar/build-libfoobar/: main.go
libfoobar/mjolnir/src/libfoobar/config/: config.go  config_test.go
libfoobar/mjolnir/src/libfoobar/foo/: foo.go  foo_test.go
mjolnir/src/libmjolnir-demo/baz/: baz.go  baz_test.go
mjolnir/src/libmjolnir-demo/build-libmjolnir-demo/: main.go
